[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/BMmini.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://titles/Earth_is_saved.png" type="Texture" id=2]
[ext_resource path="res://GameBeated.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="GameBeated" type="Node2D"]
script = ExtResource( 3 )

[node name="EarthSavedImage" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 160, 90 )
texture = ExtResource( 2 )

[node name="CongratulationsText" type="Label" parent="."]
visible = false
margin_left = 92.0
margin_top = 142.0
margin_right = 230.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Congratulations!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EarthIsSavedText" type="Label" parent="."]
visible = false
margin_left = 43.0
margin_top = 162.0
margin_right = 275.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Earth is safe. You're a super pilot! Thanks for playing!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlinkText" type="Timer" parent="."]
wait_time = 0.8

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="BlinkText" to="." method="_on_BlinkText_timeout"]
